<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:background="#101010" />

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/user"
        app:civ_border_color="#072cbf"
        app:civ_border_width="2dp"
        android:layout_marginTop="7dp"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#0277BD"
        android:textColorHint="#0288D1" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:textColor="#0277BD"
        android:textColorHint="#0288D1" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/city"
        android:inputType="text"
        android:textColor="#0277BD"
        android:textColorHint="#0288D1" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button_settings"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/cancel_button"
            android:background="@drawable/rounded_button_settings"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>


</LinearLayout>