<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="110dp"
            android:layout_height="130dp"
            android:layout_marginRight="15dp"
            android:src="@drawable/user"
            app:civ_border_color="#333fe6"
            app:civ_border_width="2dp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/fab_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                style="@style/lisItemTextStyle"
                android:text="@string/name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#008000" />

            <TextView
                style="@style/lisItemTextStyle"
                android:layout_marginTop="4dp"
                android:text="@string/address"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0000CD" />

            <TextView
                style="@style/lisItemTextStyle"
                android:layout_marginTop="4dp"
                android:text="@string/city"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#0000CD" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/facebook"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/facebook"
                    android:text="@string/facebook" />

                <ImageButton
                    android:id="@+id/twitter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/twitter"
                    android:text="@string/twitter" />

                <ImageButton
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/email_1"
                    android:text="@string/email" />

                <ImageButton
                    android:id="@+id/donate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/donate"
                    android:text="@string/donate" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>