<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.life.shelter.people.homeless.About"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="670dp"
            android:background="@drawable/side_nav_bar"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_margin="4dp"
                android:background="#FFFFFF"
                android:src="@drawable/help" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="#FFFFFF"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:text="@string/about_text"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="88dp"
                android:layout_marginRight="88dp"
                android:layout_marginTop="72dp"
                android:layout_marginBottom="16dp"
                android:background="#FFFFFF"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/follow_us"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/side_nav_bar"
            android:paddingTop="4dp"
            android:orientation="horizontal">

            <ImageView
                style="@style/Image"
                android:id="@+id/fb"
                android:layout_weight="2"
                android:src="@drawable/facebook"
                android:text="@string/facebook"
                />

            <ImageView
                style="@style/Image"
                android:id="@+id/twitt"
                android:layout_weight="1"
                android:src="@drawable/twitter"
                android:text="@string/twitter"
              />

            <ImageView
                style="@style/Image"
                android:id="@+id/insta"
                android:layout_weight="1"
                android:src="@drawable/instagram"
                android:text="@string/instagram"
                 />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

